Created MECV blog post

--- a/_posts/2025-09-29-MMSP Up.md
+++ b/_posts/2025-09-29-MMSP Up.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 author: William
-tags: 
+tags: node-deployment
 ---
 
 MapleMesh Summit Park (`MMSP`) is now online! It covers much of the east part of town.
