Made blog images themselves links

--- a/_posts/2025-09-29-MMSP Up.md
+++ b/_posts/2025-09-29-MMSP Up.md
@@ -7,4 +7,4 @@ tags: node-deployment
 MapleMesh Summit Park (`MMSP`) is now online! It covers much of the east part of town.
 
 Expected coverage:
-![Expected coverage map for MapleMesh Summit Park](../../../images/2025-09-29-expected-coverage.png)
+[![Expected coverage map for MapleMesh Summit Park](../../../images/2025-09-29-expected-coverage.png)](../../../images/2025-09-29-expected-coverage.png)
