--- a/_posts/2025-10-19-MECV Up.md
+++ b/_posts/2025-10-19-MECV Up.md
@@ -11,4 +11,4 @@ From a coverage standpoint, it should give some coverage to the downtown part of
 If you live or work in or near downtown Covington, feel free to reach out to us via Discord or [email](mailto:admin@maplemesh.org).
 
 Expected coverage:
-![Expected coverage map for MapleMesh East Covington](../../../images/2025-10-19-mecv-expected-coverage.png)
+[![Expected coverage map for MapleMesh East Covington](../../../images/2025-10-19-mecv-expected-coverage.png)](../../../images/2025-10-19-mecv-expected-coverage.png)
