Improved MWAX post

--- a/_posts/2025-10-22-MWAX Up.md
+++ b/_posts/2025-10-22-MWAX Up.md
@@ -6,9 +6,11 @@ tags: node-deployment
 
 MapleMesh Wax Road (`MWAX`) is more literally up than our usual meaning - it's on a local ham's tower at 51'!
 
+[![Picture of tower with node and other antennas on it](../../../images/2025-10-23-mwax-tower.jpg)](../../../images/2025-10-23-mwax-tower.jpg)
+
 Its coverage overlaps quite a bit with MapleMesh East Covington (`MECV`) but they fill in many little pockets behind hills that are otherwise shadowed for each other.
 
 If you live or work in or near downtown Covington, feel free to reach out to us via Discord or [email](mailto:admin@maplemesh.org).
 
 Expected coverage:
-![Expected coverage map for MapleMesh Wax Road](../../../images/2025-10-23-mwax-expected-coverage.png)
+[![Expected coverage map for MapleMesh Wax Road](../../../images/2025-10-23-mwax-expected-coverage.png)](../../../images/2025-10-23-mwax-expected-coverage.png)
